<resources>
    <string name="app_name" translatable="false">Expense Tracker</string>
    <string name="password" translatable="false">Password</string>
    <string name="username_mail">Username or Email</string>
    <string name="login">LogIn</string>
    <string name="forgot_password_message">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="welcome">Welcome</string>
    <string name="tagline">Manage All Expense</string>
    <string name="tagline2">At One Place</string>
    <string name="otp">OTP</string>
    <string name="send">Send</string>
    <string name="set">Reset Password</string>
    <string name="username">Username</string>
    <string name="remember_password">Remember Password?</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="resend">Resend</string>
    <string name="add">Add</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="good_morning_message">Good Morning,</string>
    <string name="outgoing">Outgoing</string>
    <string name="select_category">Select Category</string>
    <string name="submit">Submit</string>
    <string name="apply">Apply</string>
    <string name="choose_from_date">Choose From Date</string>
    <string name="choose_to_date">Choose To Date</string>
    <string name="note">Note</string>
    <string name="choose_image">Choose Image</string>
    <string name="analytics">Analytics</string>
    <string name="transactions">Transactions</string>
    <string name="dashboard">Dashboard</string>
    <string name="analysis">Analytics</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="dollar_sign">$</string>
    <string name="choose_date">Choose Date</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">%s %s</string>
    <string name="name_string">Name :</string>
    <string name="gender">Gender :</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">Save</string>
    <string name="transanctions">Transactions</string>
    <string name="select_range">Select range</string>
    <string name="from_to_date">%s - %s</string>
    <string name="from_to_date_analysis">%s -\n%s</string>
    <string name="no_internet_connection">"Check the Internet Connection"</string>
    <string name="chose_dates">Choose the Date Range</string>
    <string name="no_data_between_dates">No Data between.\nDates You Entered.</string>
    <string name="budget">Budget</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="enter_spending_across_category">Enter % Spending Across Category</string>
    <string name="transportation">Transportation</string>
    <string name="groceries">Groceries</string>
    <string name="other">Other</string>
    <string name="entertainment">Entertainment</string>
    <string name="saving">Saving</string>
    <string name="insurance">Insurance</string>
    <string name="utilities">Utilities</string>
    <string name="edit">Edit</string>
    <string name="discard">Discard</string>
    <string name="setting">Setting</string>
    <string name="delete_account">Delete Account</string>
    <string name="restore">Restore Data</string>
    <string name="reload">reload</string>
    <string name="transgender">Transgender</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="amount">Amount : %s</string>
    <string name="get_note">Note : %s</string>
    <string name="date">Date : %s</string>
    <string name="category">Category : %s</string>

</resources>