<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/cardview"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.897" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/user_white" />

                    <EditText
                        android:id="@+id/email"
                        style="@style/edittext_cardview"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/email"
                        android:textColor="@color/cardview_text_color"
                        android:textColorHint="@color/cardview_text_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:text="@string/remember_password" />

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/forgot_password"
                        android:text="@string/login" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_set_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8sp"
                    android:paddingBottom="8sp"
                    android:background="@drawable/circular_50_counter_white_blue"
                    android:text="@string/set"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>