<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.jay.expensetracker.addactivity.AddActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_blue"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/circular_background"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/debit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingLeft="20sp"
                        android:paddingRight="15sp"
                        android:text="@string/debit"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/credit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/circular_background"
                        android:paddingLeft="15sp"
                        android:paddingRight="20sp"
                        android:text="@string/credit"
                        android:textColor="@color/black"
                        android:textSize="25sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:text="@string/add_expenses"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40sp"
                    android:layout_marginTop="25sp"
                    android:layout_marginRight="40sp"
                    android:background="@drawable/button"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="50sp"
                        android:text="@string/dollar_sign"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/add_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="30sp"
                        android:hint="0"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="40sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="20sp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/date_layout"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:background="@drawable/circular_background"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10sp"
                            android:src="@drawable/calendar" />


                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20sp"
                            android:layout_marginRight="20sp"
                            android:text="@string/choose_date"
                            android:textColor="@color/black"
                            android:textSize="20sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/category_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/circular_background"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10sp"
                            android:src="@drawable/category" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20sp"
                            android:layout_marginRight="20sp"
                            android:hint="Category"
                            app:hintTextColor="@color/black">


                            <AutoCompleteTextView
                                android:id="@+id/dropdown_menu_category"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:text="@string/select_category"
                                android:textColor="@color/black"
                                android:textColorHint="@color/black" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/note_layout"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/circular_background"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10sp"
                            android:src="@drawable/note" />

                        <EditText
                            android:id="@+id/note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20sp"
                            android:layout_marginTop="5sp"
                            android:layout_marginRight="20sp"
                            android:layout_marginBottom="5sp"
                            android:hint="@string/note"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/choose_image_layout"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/circular_background"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10sp"
                            android:src="@drawable/image" />

                        <TextView
                            android:id="@+id/choose_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20sp"
                            android:layout_marginTop="5sp"
                            android:layout_marginRight="20sp"
                            android:layout_marginBottom="5sp"
                            android:hint="@string/choose_image"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/chosen_image"
                        android:layout_width="200sp"
                        android:layout_height="200sp"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30sp"
                        android:background="@drawable/circular_50_counter_white_blue"
                        android:gravity="center"
                        android:paddingTop="5sp"
                        android:paddingBottom="5sp"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>